<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="56dp"
            android:text="@string/namapanggilan"
            android:textColor="#202020"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="114dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:hint="@string/namakamu" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="201dp"
            android:text="@string/umur"
            android:textColor="#202020"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="246dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:hint="@string/contoh" />
        </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/custom_button3"
        android:layout_width="261dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/custom_button3"
        android:text="@string/selanjutnya"
        android:textSize="14sp"
        android:textStyle="bold" />

    </RelativeLayout>

