<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="228dp"
            android:text="@string/menekantombol"
            android:textAlignment="center"
            android:textColor="#202020"
            android:textSize="5pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="229dp" />

        <Button
            android:id="@+id/custom_button5"
            android:layout_width="343dp"
            android:layout_height="41dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="404dp"
            android:background="@drawable/custom_button"
            android:text="@string/mulai"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="281dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="103dp"
            android:text="@string/belumpunyakode"
            android:textAlignment="center"
            android:textSize="8pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="636dp" />

        <Button
            android:id="@+id/custom_button2"
            android:layout_width="350dp"
            android:layout_height="33dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="38dp"
            android:background="@drawable/custom_button2"
            android:text="@string/belikode"
            android:textColor="#f8f8f8"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="31dp"
            android:text="@string/kodekeluarga"
            android:textColor="#202020"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="47dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/custom_button2"
            android:layout_alignParentTop="true"
            android:layout_marginTop="81dp"
            android:layout_marginEnd="10dp"
            android:text="@string/ketikankodekeluarga"
            android:textColor="#202020"
            android:textSize="22sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="161dp"
            android:layout_marginEnd="27dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contoh1"
                android:singleLine="false" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>