<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="43dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="294dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="149dp"
            android:layout_marginEnd="65dp"
            android:contentDescription="@string/welcome"
            android:scaleType="center"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/custom_button"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp"
            android:background="@drawable/custom_button"
            android:text="@string/mulai"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="252dp"
            android:layout_marginEnd="0dp"
            android:text="@string/monitory"
            android:textAlignment="center"
            android:textColor="#202020"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>